# mdv

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  turbo.json
.changeset/: README.md  blue-masks-punch.md  release-d73ec0aa.md
.github/: pull_request_template.md
.github/workflows/: autoship.yml  binaries.yml  ci.yml  release.yml
2c/6291268aba/: metadata.json
2c/6291268aba/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
55/a7a0e1d7f7/: metadata.json
55/a7a0e1d7f7/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
76/a88da6d0ec/: metadata.json
76/a88da6d0ec/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
7c/78f5a8c21a/: metadata.json
7c/78f5a8c21a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
83/488a592242/: metadata.json
83/488a592242/0/: content_hash.txt  full.jsonl  metadata.json
b4/17bf6399d7/: metadata.json
b4/17bf6399d7/0/: content_hash.txt  full.jsonl  metadata.json
crates/mdv-cli/: Cargo.toml
crates/mdv-cli/src/: app.rs  main.rs  stream.rs  watcher.rs
crates/mdv-cli/src/app/: action.rs  input.rs  mod.rs  state.rs  update.rs
crates/mdv-cli/src/ui/: docs.rs  help.rs  layout.rs  mod.rs  render.rs  theme.rs
crates/mdv-cli/src/ui/docs/: 01-welcome.md  02-quickstart.md  03-modes.md  04-editing.md  05-selection.md  06-search.md  07-mouse.md  08-conflicts.md  09-cli.md  10-troubleshooting.md  11-settings.md
crates/mdv-cli/tests/: cli_behavior.rs  readme_parity.rs
crates/mdv-core/: Cargo.toml
scripts/: perf-smoke.mjs
(+6 files in other folders)
