[package]
name = "mdv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
mdv-core = { path = "../mdv-core" }
notify.workspace = true
ratatui.workspace = true
